@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.149 2005/04/28 03:56:08 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.150 2005/04/29 02:20:05 codeman Exp $
 
 *GLI-0.1_alpha (4 Apr 2005)
+
+  28 Apr 2005; Preston Cody <codeman@gentoo.org>
+  Added group-adding code to set_users in ArchTemplate
 
   27 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added post-install script code
